# generics-test

./: .ghci  Bar.hs  CHANGELOG.md  Foo.hs  Main.hs  Makefile  derived.txt  ds.txt  generics.cabal  unary.txt
